public/resources/css/responsive.css
/*
 * Responsive design for all CSS
 */
@media (max-width:850px) {
    /* Panneau de discussions */
    #floating_wall {
        margin-left:0;
        width:100%;
        max-width:26.5rem;
    }
    #game_container {
        padding:0;
    }
    .box{
        width: 80%;
    }
    .popup{
        width: 98%;
        max-height:96%;
    }
    #map {
        margin-right:0.2em;
    }
    /* Actions à droite de la carte */
    fieldset {
        padding:0 0.5em 0.5em 0.5em;
    }
}

@media (max-width:575px) {
    #page_container {
        border:none;
    }
    /* Met en colonne les blocs à l'intérieur de la ville */
    .city_row {
        flex-direction:column;
        align-items:center;
    }
    /* Elargit la liste de notifications */
    #notifsBlock {
        width:80%;
        left:1.5em;
    }
    
    #connectionForm {
        max-width:98%;
    }
    
    #city_iso {
        display:none;
    }
    #actions_panel {
        left:0;
    }
    
    /* Hide the text of the button which opens the "communications" panel, 
    keep only the icon */
    #showWall {
        width: 3.2rem; /* Must be equal to the height */
        border-radius:50%;
    }
    #showWall .text {
        display:none;
    }
    
    /* Avoid the "status" and "bag" icons to overflow at the left of the screen */
    #statusbar, #bagbar {
        margin-left:5%;
    }
    
    /* Compact the "Tasks" (goals) button */
    #tasks_button {
        width:3rem; /* Must be equal to the height to get a round button */
        border-radius:50%;
    }
    #tasks_button .text {
        display:none;
    }
}

